          extended statistics like score distribution from the generated PDF
          seen by the student (this feature was added as a security measure by
          request from a teacher).

        * Added proxy script for use with external, unsecured URL's. Use the
          script as: proxy?url=http://www.example.com/xxx

Version 1.5.5 (2011-01-12):

        * UPPDOK codes can now be utilized to fetch lists of registered students
          and add them as participators on an examination.

        * Added an result section from where students can download the result of
	  completed and all-ready decoded examinations.
	  
	* Added transliteration for converting between charsets when generating
	  PDF-files. This should fix most issues with UTF-8 decoding.

        * Improved user experience by adding confirm() calls on delete.

Version 1.5.4 (2010-12-13):

        * Questions in the exam can now be answered in a 'save' and 'save and
	  move next' manner.
	  
	* Implemented topics for examinations. This allows us to create a set
	  of questions for each student examination out of a bank of questions.
	  
	  Each topic has an associated randomize number dictating how many
          questions to randomly select from the topic. If its zero, then all
          questions are used from that particular topic.
	  
	* Implemented import of questions banks. Both Ping-Pong and OpenExam
	  will be supported. MS Excel, plain text and XML is the supported 
	  formats.

        * OpenExam projects (the complete examination together with questions)
          can now be imported and exported.

        * Full support for unicode (UTF-8) in user interface, result report
          and database storage.

        * Added PHP and SQL script for updating the database schema inside the
          directory admin/sql/upgrade/.

        * Added simple utility that generates MDB2 code creating the database
          from a MySQL dump.

Version 1.5.3 (2010-08-25):
